--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+server.port=8081
